--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -7,7 +7,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 216,
-"scroll_position": 192.0,
+"scroll_position": 194.0,
 "selection": false,
 "syntax_highlighter": "Texto Simples"
 }
@@ -21,7 +21,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 31,
-"scroll_position": 0.0,
+"scroll_position": 8.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,11 +31,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 34,
-"scroll_position": 35.0,
+"row": 55,
+"scroll_position": 58.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -45,16 +45,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 36,
+"column": 79,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 4,
+"row": 9,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 36,
-"selection_from_line": 4,
-"selection_to_column": 0,
-"selection_to_line": 17,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -63,12 +59,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 20,
-"folded_lines": Array[int]([33]),
+"column": 9,
+"folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 99,
-"scroll_position": 70.0,
-"selection": false,
+"row": 96,
+"scroll_position": 80.0,
+"selection": true,
+"selection_from_column": 8,
+"selection_from_line": 96,
+"selection_to_column": 9,
+"selection_to_line": 96,
 "syntax_highlighter": "GDScript"
 }
 
@@ -119,11 +119,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 5,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 5,
-"scroll_position": 5.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
