--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -7,7 +7,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 216,
-"scroll_position": 192.0,
+"scroll_position": 194.0,
 "selection": false,
 "syntax_highlighter": "Texto Simples"
 }
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 32,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 33,
-"scroll_position": 0.0,
+"row": 31,
+"scroll_position": 8.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,11 +31,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
-"folded_lines": Array[int]([73]),
+"column": 17,
+"folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 58,
-"scroll_position": 36.0,
+"row": 73,
+"scroll_position": 64.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -45,10 +45,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 63,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 209,
+"row": 9,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -59,11 +59,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 13,
-"folded_lines": Array[int]([34, 49, 113]),
+"column": 7,
+"folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 102,
-"scroll_position": 64.0,
+"row": 96,
+"scroll_position": 80.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -115,11 +115,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 5,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 5,
-"scroll_position": 5.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
