--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -49,11 +49,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 24,
-"folded_lines": Array[int]([129]),
+"column": 0,
+"folded_lines": Array[int]([79, 130, 161]),
 "h_scroll_position": 0,
-"row": 239,
-"scroll_position": 194.0,
+"row": 45,
+"scroll_position": 37.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -63,11 +63,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 34,
-"folded_lines": Array[int]([66]),
+"column": 46,
+"folded_lines": Array[int]([32, 40, 55, 70, 78]),
 "h_scroll_position": 0,
-"row": 133,
-"scroll_position": 110.0,
+"row": 141,
+"scroll_position": 52.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -95,10 +95,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 25,
+"column": 30,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 23,
+"row": 20,
 "scroll_position": 5.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
