--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -44,7 +44,7 @@ position=Vector2i(0, 23)
 [ScriptEditor]
 
 open_scripts=["res://Scripts/game_over.gd", "res://Scripts/Global.gd", "res://Scripts/lista_de_comandos.gd", "res://Scripts/Objetos de ação.gd", "res://Scripts/pontuação.gd"]
-selected_script="res://Scripts/pontuação.gd"
+selected_script="res://Scripts/game_over.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
