--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -50,10 +50,10 @@ state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
 "column": 0,
-"folded_lines": Array[int]([79, 130, 161]),
+"folded_lines": Array[int]([79, 130]),
 "h_scroll_position": 0,
 "row": 45,
-"scroll_position": 37.0,
+"scroll_position": 139.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -63,11 +63,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 46,
-"folded_lines": Array[int]([32, 40, 55, 70, 78]),
+"column": 0,
+"folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 141,
-"scroll_position": 52.0,
+"row": 126,
+"scroll_position": 123.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -77,16 +77,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 32,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 26,
-"scroll_position": 4.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 0,
-"selection_to_column": 0,
-"selection_to_line": 26,
+"row": 18,
+"scroll_position": 2.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -95,11 +91,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 30,
+"column": 33,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 20,
-"scroll_position": 5.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
