--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Assets/Finais/Objetos de ação/Player/Player atk sheet.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Cenas/", "res://Assets/", "res://Assets/Finais/UI/GUI/")
+dock_filesystem_selected_paths=PackedStringArray("res://Assets/Finais/Objetos de ação/Inimigo/Inimigo def.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Cenas/", "res://Assets/", "res://Assets/Finais/", "res://Assets/Finais/UI/", "res://Assets/Finais/UI/Menu/", "res://Assets/Finais/UI/GUI/", "res://Assets/Finais/Objetos de ação/", "res://Assets/Finais/Objetos de ação/Player/", "res://Assets/Finais/Objetos de ação/Inimigo/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Cenas/sword_slasher.tscn", "res://Cenas/flecha.tscn", "res://Cenas/barra_de_vida_inimiga.tscn")
+open_scenes=PackedStringArray("res://Cenas/sword_slasher.tscn", "res://Cenas/flecha.tscn", "res://Cenas/barra_de_vida_inimiga.tscn", "res://Cenas/menu.tscn")
 current_scene="res://Cenas/sword_slasher.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
@@ -37,14 +37,14 @@ selected_bottom_panel_item=0
 
 [EditorWindow]
 
-screen=0
+screen=1
 mode="maximized"
-position=Vector2i(1920, 171)
+position=Vector2i(0, 23)
 
 [ScriptEditor]
 
 open_scripts=["res://Scripts/flecha.gd", "res://Scripts/game_over.gd", "res://Scripts/Global.gd", "res://Scripts/lista_de_comandos.gd", "res://Scripts/Objetos de ação.gd", "res://Scripts/pontuação.gd"]
-selected_script="res://Scripts/pontuação.gd"
+selected_script="res://Scripts/Objetos de ação.gd"
 open_help=["Timer"]
 script_split_offset=200
 list_split_offset=0
