--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -30,7 +30,7 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://Cenas/sword_slasher.tscn", "res://Cenas/flecha.tscn", "res://Cenas/barra_de_vida_inimiga.tscn", "res://Cenas/menu.tscn", "res://Cenas/instruções_guia.tscn")
 current_scene="res://Cenas/sword_slasher.tscn"
-center_split_offset=-302
+center_split_offset=-257
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
@@ -44,7 +44,7 @@ position=Vector2i(0, 23)
 [ScriptEditor]
 
 open_scripts=["res://Scripts/camera_2d.gd", "res://Scripts/flecha.gd", "res://Scripts/game_over.gd", "res://Scripts/Global.gd", "res://Scripts/instruções_guia.gd", "res://Scripts/lista_de_comandos.gd", "res://Scripts/Objetos de ação.gd", "res://Scripts/pontuação.gd"]
-selected_script="res://Scripts/lista_de_comandos.gd"
+selected_script="res://Scripts/pontuação.gd"
 open_help=["Object", "Timer", "Tween"]
 script_split_offset=200
 list_split_offset=59
