--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -17,7 +17,7 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 7,
+"column": 18,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 8,
@@ -35,11 +35,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 25,
+"column": 27,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
-"scroll_position": 12.0,
+"row": 41,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -49,11 +49,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 46,
-"folded_lines": Array[int]([36, 48, 58, 78, 83, 133, 197, 212, 229, 252]),
+"column": 27,
+"folded_lines": Array[int]([34, 46, 56, 62, 76, 138, 184, 202, 217, 255, 260]),
 "h_scroll_position": 0,
-"row": 65,
-"scroll_position": 36.0,
+"row": 29,
+"scroll_position": 65.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -63,12 +63,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
-"folded_lines": Array[int]([]),
+"column": 12,
+"folded_lines": Array[int]([40, 55, 70]),
 "h_scroll_position": 0,
-"row": 41,
-"scroll_position": 30.0,
-"selection": false,
+"row": 144,
+"scroll_position": 96.0,
+"selection": true,
+"selection_from_column": 5,
+"selection_from_line": 144,
+"selection_to_column": 12,
+"selection_to_line": 144,
 "syntax_highlighter": "GDScript"
 }
 
@@ -91,10 +95,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 19,
+"column": 33,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
+"row": 22,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -123,10 +127,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 25,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 7,
+"row": 5,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -141,7 +145,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 13,
-"scroll_position": 3.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
