--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -53,7 +53,7 @@ state={
 "folded_lines": Array[int]([34, 46, 56, 62, 76, 138, 184, 202, 217, 255, 260]),
 "h_scroll_position": 0,
 "row": 29,
-"scroll_position": 65.0,
+"scroll_position": 8.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -67,7 +67,7 @@ state={
 "folded_lines": Array[int]([41, 56, 71]),
 "h_scroll_position": 0,
 "row": 120,
-"scroll_position": 80.0,
+"scroll_position": 63.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -77,11 +77,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 16,
-"folded_lines": Array[int]([]),
+"column": 0,
+"folded_lines": Array[int]([51]),
 "h_scroll_position": 0,
-"row": 17,
-"scroll_position": 3.0,
+"row": 7,
+"scroll_position": 4.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -119,10 +119,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 21,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
+"row": 15,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -147,10 +147,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 15,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
+"row": 15,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
